Add book, rework gradle.build and textures

--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,4 +1,14 @@
 {
+  "advancements.advancedperipherals.root": "Advanced Peripherals",
+  "advancements.advancedperipherals.root.description": "Every journey starts from first block ...",
+  "advancements.advancedperipherals.weak_mechanic_soul": "First mechanic soul",
+  "advancements.advancedperipherals.weak_mechanic_soul.description": "Does afterlife exists in minecraft?",
+  "advancements.advancedperipherals.end_mechanic_soul": "End mechanic soul",
+  "advancements.advancedperipherals.end_mechanic_soul.description": "If you can code gps-free position location with this, you win",
+  "advancements.advancedperipherals.husbandry_mechanic_soul": "Husbandry mechanic soul",
+  "advancements.advancedperipherals.husbandry_mechanic_soul.description": "Does this soul gluten-free? ",
+  "advancements.advancedperipherals.overpowered_mechanic_soul": "Overpowered soul",
+  "advancements.advancedperipherals.overpowered_mechanic_soul.description": "Can you handle so much power?",
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.ar_goggles": "AR Goggles",
@@ -6,7 +16,9 @@
   "item.advancedperipherals.weak_mechanic_soul": "Weak mechanic soul",
   "item.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak mechanic soul",
   "item.advancedperipherals.end_mechanic_soul": "End mechanic soul",
+  "item.advancedperipherals.overpowered_end_mechanic_soul": "Overpowered end mechanic soul",
   "item.advancedperipherals.husbandry_mechanic_soul": "Husbandry mechanic soul",
+  "item.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry mechanic soul",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
@@ -29,9 +41,11 @@
   "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
   "item.advancedperipherals.tooltip.nbt_storage": "§7This block is able to store some nbt data",
   "item.advancedperipherals.tooltip.weak_mechanic_soul": "§7Upgrade for turtle, that allow turtle to become useful again",
-  "item.advancedperipherals.tooltip.overpowered_weak_mechanic_soul": "§7Upgrade for turtle, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.overpowered_weak_mechanic_soul": "§7Improved version of weak mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
   "item.advancedperipherals.tooltip.end_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
+  "item.advancedperipherals.tooltip.overpowered_end_mechanic_soul": "§7Improved version of end mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
   "item.advancedperipherals.tooltip.husbandry_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and advanced interaction with animals",
+  "item.advancedperipherals.tooltip.overpowered_husbandry_mechanic_soul": "§7Improved version of husbandry mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -54,7 +68,9 @@
   "turtle.advancedperipherals.weak_mechanic_soul": "Weak automata",
   "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
   "turtle.advancedperipherals.husbandry_weak_mechanic_soul": "Husbandry weak automata",
+  "turtle.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry automata",
   "turtle.advancedperipherals.end_mechanic_soul": "End automata",
+  "turtle.advancedperipherals.overpowered_end_mechanic_soul": "Overpowered end automata",
   "pocket.advancedperipherals.environment_pocket": "Environment",
   "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
