--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -67,7 +67,7 @@
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
   "turtle.advancedperipherals.weak_mechanic_soul": "Weak automata",
   "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
-  "turtle.advancedperipherals.husbandry_weak_mechanic_soul": "Husbandry weak automata",
+  "turtle.advancedperipherals.husbandry_mechanic_soul": "Husbandry automata",
   "turtle.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry automata",
   "turtle.advancedperipherals.end_mechanic_soul": "End automata",
   "turtle.advancedperipherals.overpowered_end_mechanic_soul": "Overpowered end automata",
