--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry mechanic soul",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
+  "item.advancedperipherals.tooltip.disabled": "§cThis item is disabled in config, so you can craft it, but peripheral logic will not work",
   "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
   "item.advancedperipherals.tooltip.chunk_controller": "§7A crafting ingredient for the Chunky Turtle.",
   "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
