Add new advancements

--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -9,6 +9,14 @@
   "advancements.advancedperipherals.husbandry_mechanic_soul.description": "Does this soul gluten-free? ",
   "advancements.advancedperipherals.overpowered_mechanic_soul": "Overpowered soul",
   "advancements.advancedperipherals.overpowered_mechanic_soul.description": "Can you handle so much power?",
+  "advancements.advancedperipherals.ar_toolkit": "AR-ready!",
+  "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that require to use AR feature. Now you decide, how reality looks like",
+  "advancements.advancedperipherals.base_toolkit": "Gentleman's set!",
+  "advancements.advancedperipherals.base_toolkit.description": "Collect redstone integrator, inventory manager and energy detector. How did you even play without this?",
+  "advancements.advancedperipherals.nbt_toolkit": "UNLIMITED POWER!!!",
+  "advancements.advancedperipherals.nbt_toolkit.description": "Collect nbt storage and block reader. Now every world secret it open to you!",
+  "advancements.advancedperipherals.sense_toolkit": "Truth cannot be hidden forever",
+  "advancements.advancedperipherals.sense_toolkit.description": "Collect geo scanner and environmental detector. There is no limits for observability!",
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.ar_goggles": "AR Goggles",
