--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,14 +1,14 @@
 {
   "advancements.advancedperipherals.root": "Advanced Peripherals",
   "advancements.advancedperipherals.root.description": "Every journey starts from first block ...",
-  "advancements.advancedperipherals.weak_mechanic_soul": "First mechanic soul",
-  "advancements.advancedperipherals.weak_mechanic_soul.description": "Does afterlife exists in minecraft?",
-  "advancements.advancedperipherals.end_mechanic_soul": "End mechanic soul",
-  "advancements.advancedperipherals.end_mechanic_soul.description": "If you can code gps-free position location with this, you win",
-  "advancements.advancedperipherals.husbandry_mechanic_soul": "Husbandry mechanic soul",
-  "advancements.advancedperipherals.husbandry_mechanic_soul.description": "Does this soul gluten-free? ",
-  "advancements.advancedperipherals.overpowered_mechanic_soul": "Overpowered soul",
-  "advancements.advancedperipherals.overpowered_mechanic_soul.description": "Can you handle so much power?",
+  "advancements.advancedperipherals.weak_automata_core": "First automata core",
+  "advancements.advancedperipherals.weak_automata_core.description": "Does afterlife exists in minecraft?",
+  "advancements.advancedperipherals.end_automata_core": "End automata core",
+  "advancements.advancedperipherals.end_automata_core.description": "If you can code gps-free position location with this, you win",
+  "advancements.advancedperipherals.husbandry_automata_core": "Husbandry automata core",
+  "advancements.advancedperipherals.husbandry_automata_core.description": "Does this core gluten-free? ",
+  "advancements.advancedperipherals.overpowered_automata_core": "Overpowered automata core",
+  "advancements.advancedperipherals.overpowered_automata_core.description": "Can you handle so much power?",
   "advancements.advancedperipherals.ar_toolkit": "AR-ready!",
   "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that require to use AR feature. Now you decide, how reality looks like",
   "advancements.advancedperipherals.base_toolkit": "Gentleman's set!",
@@ -21,12 +21,12 @@
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.ar_goggles": "AR Goggles",
   "item.advancedperipherals.memory_card": "Memory Card",
-  "item.advancedperipherals.weak_mechanic_soul": "Weak mechanic soul",
-  "item.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak mechanic soul",
-  "item.advancedperipherals.end_mechanic_soul": "End mechanic soul",
-  "item.advancedperipherals.overpowered_end_mechanic_soul": "Overpowered end mechanic soul",
-  "item.advancedperipherals.husbandry_mechanic_soul": "Husbandry mechanic soul",
-  "item.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry mechanic soul",
+  "item.advancedperipherals.weak_automata_core": "Weak automata core",
+  "item.advancedperipherals.overpowered_weak_automata_core": "Overpowered weak automata core",
+  "item.advancedperipherals.end_automata_core": "End automata core",
+  "item.advancedperipherals.overpowered_end_automata_core": "Overpowered end automata core",
+  "item.advancedperipherals.husbandry_automata_core": "Husbandry automata core",
+  "item.advancedperipherals.overpowered_husbandry_automata_core": "Overpowered husbandry automata core",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.disabled": "§cThis item is disabled in config, so you can craft it, but peripheral logic will not work",
@@ -49,12 +49,12 @@
   "item.advancedperipherals.tooltip.geo_scanner": "§7This block is able to scan area around him",
   "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
   "item.advancedperipherals.tooltip.nbt_storage": "§7This block is able to store some nbt data",
-  "item.advancedperipherals.tooltip.weak_mechanic_soul": "§7Upgrade for turtle, that allow turtle to become useful again",
-  "item.advancedperipherals.tooltip.overpowered_weak_mechanic_soul": "§7Improved version of weak mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
-  "item.advancedperipherals.tooltip.end_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
-  "item.advancedperipherals.tooltip.overpowered_end_mechanic_soul": "§7Improved version of end mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
-  "item.advancedperipherals.tooltip.husbandry_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and advanced interaction with animals",
-  "item.advancedperipherals.tooltip.overpowered_husbandry_mechanic_soul": "§7Improved version of husbandry mechanic soul, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.weak_automata_core": "§7Upgrade for turtle, that allow turtle to become useful again",
+  "item.advancedperipherals.tooltip.overpowered_weak_automata_core": "§7Improved version of weak automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.end_automata_core": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
+  "item.advancedperipherals.tooltip.overpowered_end_automata_core": "§7Improved version of end automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.husbandry_automata_core": "§7Upgrade for turtle, that allow basic interaction and advanced interaction with animals",
+  "item.advancedperipherals.tooltip.overpowered_husbandry_automata_core": "§7Improved version of husbandry automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -74,12 +74,12 @@
   "turtle.advancedperipherals.player_detector_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
-  "turtle.advancedperipherals.weak_mechanic_soul": "Weak automata",
-  "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
-  "turtle.advancedperipherals.husbandry_mechanic_soul": "Husbandry automata",
-  "turtle.advancedperipherals.overpowered_husbandry_mechanic_soul": "Overpowered husbandry automata",
-  "turtle.advancedperipherals.end_mechanic_soul": "End automata",
-  "turtle.advancedperipherals.overpowered_end_mechanic_soul": "Overpowered end automata",
+  "turtle.advancedperipherals.weak_automata": "Weak automata",
+  "turtle.advancedperipherals.overpowered_weak_automata": "Overpowered weak automata",
+  "turtle.advancedperipherals.husbandry_automata": "Husbandry automata",
+  "turtle.advancedperipherals.overpowered_husbandry_automata": "Overpowered husbandry automata",
+  "turtle.advancedperipherals.end_automata": "End automata",
+  "turtle.advancedperipherals.overpowered_end_automata": "Overpowered end automata",
   "pocket.advancedperipherals.environment_pocket": "Environment",
   "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
@@ -88,7 +88,7 @@
   "text.advancedperipherals.removed_player": "Cleared the memory card",
   "text.advancedperipherals.added_player": "Added you to the memory card",
   "text.advancedperipherals.linked_goggles": "Successfully linked AR goggles!",
-  "text.advancedperipherals.weak_mechanical_player_used_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
+  "text.advancedperipherals.automata_core_feed_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "Computer Scientist",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
