--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -1,50 +1,94 @@
 {
+  "advancements.advancedperipherals.root": "Advanced Peripherals",
+  "advancements.advancedperipherals.root.description": "Every journey starts from first block ...",
+  "advancements.advancedperipherals.weak_automata_core": "First automata core",
+  "advancements.advancedperipherals.weak_automata_core.description": "Does afterlife exists in minecraft?",
+  "advancements.advancedperipherals.end_automata_core": "End automata core",
+  "advancements.advancedperipherals.end_automata_core.description": "If you can code gps-free position location with this, you win",
+  "advancements.advancedperipherals.husbandry_automata_core": "Husbandry automata core",
+  "advancements.advancedperipherals.husbandry_automata_core.description": "Does this core gluten-free? ",
+  "advancements.advancedperipherals.overpowered_automata_core": "Overpowered automata core",
+  "advancements.advancedperipherals.overpowered_automata_core.description": "Can you handle so much power?",
+  "advancements.advancedperipherals.ar_toolkit": "AR-ready!",
+  "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that require to use AR feature. Now you decide, how reality looks like",
+  "advancements.advancedperipherals.base_toolkit": "Gentleman's set!",
+  "advancements.advancedperipherals.base_toolkit.description": "Collect redstone integrator, inventory manager and energy detector. How did you even play without this?",
+  "advancements.advancedperipherals.nbt_toolkit": "UNLIMITED POWER!!!",
+  "advancements.advancedperipherals.nbt_toolkit.description": "Collect nbt storage and block reader. Now every world secret it open to you!",
+  "advancements.advancedperipherals.sense_toolkit": "Truth cannot be hidden forever",
+  "advancements.advancedperipherals.sense_toolkit.description": "Collect geo scanner and environmental detector. There is no limits for observability!",
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
-  "item.advancedperipherals.computer_tool": "Computer Werkzeug",
-  "item.advancedperipherals.ar_goggles": "AR-Brille",
-  "item.advancedperipherals.memory_card": "Speicher Karte",
-  "item.advancedperipherals.tooltip.computer_tool": "§7Mit diesem Tool kannst du GUI's von Blöcken öffnen. Aber zur zeit ist dieses Item nutzlos.",
-  "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7Für Beschreibung",
-  "item.advancedperipherals.tooltip.energy_detector": "§7Kann die Übertragung von Energie erkennen und handelt als Wiederstand.",
-  "item.advancedperipherals.tooltip.chunk_controller": "§7Crafting Komponente für die Chunky Turtle.",
-  "item.advancedperipherals.tooltip.environment_detector": "§7Kann mit der Welt interagieren.",
-  "item.advancedperipherals.tooltip.player_detector": "§7Kann mit Spieler interagieren.",
-  "item.advancedperipherals.tooltip.rs_bridge": "§7Kann mit Refined Storage interagieren.",
-  "item.advancedperipherals.tooltip.me_bridge": "§7Kann mit Applied Energistics 2 interagieren.",
-  "item.advancedperipherals.tooltip.chat_box": "§7Kann genutzt werden um Nachrichten zu lesen und zu schreiben.",
-  "item.advancedperipherals.tooltip.ar_controller": "§7Kann genutzt werden, um die AR-Brille kabellos zu kontrollieren.",
-  "item.advancedperipherals.tooltip.ar_goggles": "§7Stellt ein Overlay dar, welches vom verknüpften AR-Controller gesteuert wird. Rechtsklick auf den Controller zum Verknüpfen.",
-  "item.advancedperipherals.tooltip.ar_goggles.binding": "Verbunden mit dem Controller bei %d %d %d.",
-  "item.advancedperipherals.tooltip.peripheral_casing": "§7Eine leere Hülle ohne die Liebe die sie verdient hat.",
-  "item.advancedperipherals.tooltip.memory_card": "§7Speichert den Namen eines Spielers um diesen in einem Inventar Manager zu nutzen.",
-  "item.advancedperipherals.tooltip.memory_card.bound": "Verbunden mit %s.",
-  "item.advancedperipherals.tooltip.inventory_manager": "§Dieser Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
-  "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit redstone zu interagieren genau so wie es ein normaler computer tut.",
-  "item.advancedperipherals.tooltip.block_reader": "§7Dieser Block ist in der Lage, Daten von Blöcken und Tile Entities vor ihm zu lesen.",
-  "item.advancedperipherals.tooltip.colony_integrator": "§7Dieser Block ist in der Lage, mit Mine Colonies und deren kolonien zu interagieren.",
-  "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
-  "block.advancedperipherals.chat_box": "Chat Box",
-  "block.advancedperipherals.player_detector": "Spieler Detektor",
-  "block.advancedperipherals.me_bridge": "ME Brücke",
-  "block.advancedperipherals.rs_bridge": "RS Brücke",
+  "item.advancedperipherals.computer_tool": "Computer Tool",
+  "item.advancedperipherals.ar_goggles": "AR Goggles",
+  "item.advancedperipherals.memory_card": "Memory Card",
+  "item.advancedperipherals.weak_automata_core": "Weak automata core",
+  "item.advancedperipherals.overpowered_weak_automata_core": "Overpowered weak automata core",
+  "item.advancedperipherals.end_automata_core": "End automata core",
+  "item.advancedperipherals.overpowered_end_automata_core": "Overpowered end automata core",
+  "item.advancedperipherals.husbandry_automata_core": "Husbandry automata core",
+  "item.advancedperipherals.overpowered_husbandry_automata_core": "Overpowered husbandry automata core",
+  "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
+  "item.advancedperipherals.tooltip.show_desc": "§b[§7%s§b] §7For Description",
+  "item.advancedperipherals.tooltip.disabled": "§cThis item is disabled in config, so you can craft it, but peripheral logic will not work",
+  "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
+  "item.advancedperipherals.tooltip.chunk_controller": "§7A crafting ingredient for the Chunky Turtle.",
+  "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
+  "item.advancedperipherals.tooltip.player_detector": "§7Can be used to interact with Players.",
+  "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
+  "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
+  "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
+  "item.advancedperipherals.tooltip.ar_controller": "§7Used to control linked AR goggles wirelessly.",
+  "item.advancedperipherals.tooltip.ar_goggles": "§7Provide an HUD overlay, controllable by the linked AR Controller. Right click controller to link.",
+  "item.advancedperipherals.tooltip.ar_goggles.binding": "Bound to controller at %d %d %d.",
+  "item.advancedperipherals.tooltip.peripheral_casing": "§7An empty hull without the love it deserves.",
+  "item.advancedperipherals.tooltip.memory_card": "§7Can save the rights of a player to use it in a inventory manager.",
+  "item.advancedperipherals.tooltip.memory_card.bound": "Bound to %s.",
+  "item.advancedperipherals.tooltip.inventory_manager": "§7This block is able to send or receive specific items from a player inventory.",
+  "item.advancedperipherals.tooltip.redstone_integrator": "§7This block is able to interact with redstone. Works exactly like the redstone api of an computer.",
+  "item.advancedperipherals.tooltip.block_reader": "§7This block is able to read data of blocks and tile entities in front of it",
+  "item.advancedperipherals.tooltip.geo_scanner": "§7This block is able to scan area around him",
+  "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
+  "item.advancedperipherals.tooltip.nbt_storage": "§7This block is able to store some nbt data",
+  "item.advancedperipherals.tooltip.weak_automata_core": "§7Upgrade for turtle, that allow turtle to become useful again",
+  "item.advancedperipherals.tooltip.overpowered_weak_automata_core": "§7Improved version of weak automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.end_automata_core": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
+  "item.advancedperipherals.tooltip.overpowered_end_automata_core": "§7Improved version of end automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.husbandry_automata_core": "§7Upgrade for turtle, that allow basic interaction and advanced interaction with animals",
+  "item.advancedperipherals.tooltip.overpowered_husbandry_automata_core": "§7Improved version of husbandry automata core, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "block.advancedperipherals.environment_detector": "Environment Detector",
+  "block.advancedperipherals.chat_box": "Chat box",
+  "block.advancedperipherals.player_detector": "Player Detector",
+  "block.advancedperipherals.me_bridge": "ME Bridge",
+  "block.advancedperipherals.rs_bridge": "RS Bridge",
   "block.advancedperipherals.ar_controller": "AR Controller",
-  "block.advancedperipherals.energy_detector": "Energie Detektor",
-  "block.advancedperipherals.peripheral_casing": "Peripherie Gehäuse",
-  "block.advancedperipherals.inventory_manager": "Inventar Manager",
+  "block.advancedperipherals.energy_detector": "Energy Detector",
+  "block.advancedperipherals.peripheral_casing": "Peripheral Casing",
+  "block.advancedperipherals.inventory_manager": "Inventory Manager",
   "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
-  "block.advancedperipherals.block_reader": "Block Leser",
-  "block.advancedperipheral.colony_integrator": "Kolonie Integrator",
+  "block.advancedperipherals.block_reader": "Block Reader",
+  "block.advancedperipherals.geo_scanner": "Geo Scanner",
+  "block.advancedperipherals.nbt_storage": "NBT Storage",
+  "block.advancedperipherals.colony_integrator": "Colony Integrator",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
-  "turtle.advancedperipherals.environment_detector_turtle": "Umgebungs",
-  "turtle.advancedperipherals.player_detector_turtle": "Spieler",
+  "turtle.advancedperipherals.environment_detector_turtle": "Environment",
+  "turtle.advancedperipherals.player_detector_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
-  "pocket.advancedperipherals.environment_pocket": "Umgebung",
-  "pocket.advancedperipherals.player_pocket": "Spieler",
+  "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
+  "turtle.advancedperipherals.weak_automata": "Weak automata",
+  "turtle.advancedperipherals.overpowered_weak_automata": "Overpowered weak automata",
+  "turtle.advancedperipherals.husbandry_automata": "Husbandry automata",
+  "turtle.advancedperipherals.overpowered_husbandry_automata": "Overpowered husbandry automata",
+  "turtle.advancedperipherals.end_automata": "End automata",
+  "turtle.advancedperipherals.overpowered_end_automata": "Overpowered end automata",
+  "pocket.advancedperipherals.environment_pocket": "Environment",
+  "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
-  "curios.identifier.glasses": "Brille",
-  "text.advancedperipherals.removed_player": "Die Speicher Karte wurde geleert",
-  "text.advancedperipherals.added_player": "Die Speicher Karte wurde dir zugewiesen",
-  "text.advancedperipherals.linked_goggles": "Erfolgreich verknüpft!",
-  "entity.minecraft.villager.advancedperipherals.computer_scientist": "Informatiker",
+  "pocket.advancedperipherals.geoscanner_pocket": "Geoscanning",
+  "curios.identifier.glasses": "Glasses",
+  "text.advancedperipherals.removed_player": "Cleared the memory card",
+  "text.advancedperipherals.added_player": "Added you to the memory card",
+  "text.advancedperipherals.linked_goggles": "Successfully linked AR goggles!",
+  "text.advancedperipherals.automata_core_feed_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
+  "entity.minecraft.villager.advancedperipherals.computer_scientist": "Computer Scientist",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
