--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -84,6 +84,7 @@
   "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
   "pocket.advancedperipherals.geoscanner_pocket": "Geoscanning",
+  "pocket.advancedperipherals.colony_pocket": "Colony",
   "curios.identifier.glasses": "Glasses",
   "text.advancedperipherals.removed_player": "Cleared the memory card",
   "text.advancedperipherals.added_player": "Added you to the memory card",
