--- a/src/main/resources/assets/advancedperipherals/lang/ru_ru.json
+++ b/src/main/resources/assets/advancedperipherals/lang/ru_ru.json
@@ -1,5 +1,5 @@
-# Russian language added by DrHesperus.
 {
+	"_comment:": "# Russian language added by DrHesperus.",
 	"advancements.advancedperipherals.root": "Продвинутая переферия",
 	"advancements.advancedperipherals.root.description": "Каждое путешествие начинается с первого блока...",
 	"advancements.advancedperipherals.weak_automata_core": "Первое ядро автомата",
