--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -29,7 +29,7 @@
   "item.advancedperipherals.end_automata_core": "End automata",
   "item.advancedperipherals.overpowered_end_automata_core": "Overpowered end automata",
   "item.advancedperipherals.tooltip.computer_tool": "§7Mit diesem Tool kannst du GUI's von Blöcken öffnen. Aber zur zeit ist dieses Item nutzlos.",
-  "item.advancedperipherals.tooltip.show_desc": "§b[§7CTRL§b] §7Für Beschreibung",
+  "item.advancedperipherals.tooltip.show_desc": "§b[§7%s§b] §7Für Beschreibung",
   "item.advancedperipherals.tooltip.disabled": "§cDieser Block ist deaktiviert in der Config, du kannst es craften aber es wird keinen nutzen haben.",
   "item.advancedperipherals.tooltip.energy_detector": "§7Kann die Übertragung von Energie erkennen und handelt als Wiederstand.",
   "item.advancedperipherals.tooltip.chunk_controller": "§7Crafting Komponente für die Chunky Turtle.",
