--- a/src/main/resources/assets/advancedperipherals/lang/fr_fr.json
+++ b/src/main/resources/assets/advancedperipherals/lang/fr_fr.json
@@ -73,7 +73,7 @@
   "block.advancedperipherals.colony_integrator": "Intégrateur de colony",
 
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
-  "turtle.advancedperipherals.environment_detector_turtle": "Environnement",
+  "turtle.advancedperipherals.environment_turtle": "Environnement",
   "turtle.advancedperipherals.player_detector_turtle": "Joueur",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
