--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -1,33 +1,32 @@
 {
   "advancements.advancedperipherals.root": "Advanced Peripherals",
-  "advancements.advancedperipherals.root.description": "Jede Reise startet mit einem Block...",
-  "advancements.advancedperipherals.weak_automata_core": "First automata core",
+  "advancements.advancedperipherals.root.description": "Every journey starts from with the first block ...",
+  "advancements.advancedperipherals.weak_automata_core": "Erster Automatisierungskern",
   "advancements.advancedperipherals.weak_automata_core.description": "Existiert ein Leben nacht dem Tot in Minecraft?",
-  "advancements.advancedperipherals.end_automata_core": "End automata core",
-  "advancements.advancedperipherals.end_automata_core.description": "Wenn du damit einen GPS-freien Positionsstandort codieren kannst, gewinnst du!",
+  "advancements.advancedperipherals.end_automata_core": "End' Automatisierungskern",
+  "advancements.advancedperipherals.end_automata_core.description": "Wenn du die Position der gps-freien Position mit diesem Code codieren kannst, gewinnst du",
   "advancements.advancedperipherals.husbandry_automata_core": "Landwirtschafts automata core",
   "advancements.advancedperipherals.husbandry_automata_core.description": "Ist dieser Kern Gluten frei? ",
-  "advancements.advancedperipherals.overpowered_automata_core": "Overpowered automata core",
+  "advancements.advancedperipherals.overpowered_automata_core": "Überladener Automatisierungskern",
   "advancements.advancedperipherals.overpowered_automata_core.description": "Kannst du so viel Macht vertragen?",
-  "advancements.advancedperipherals.ar_toolkit": "AR-ready!",
-  "advancements.advancedperipherals.ar_toolkit.description": "Erlange Items, die dir die Fähigkeit geben AR zu nutzen. Jetzt entscheidest du, wie die Realität aussieht.",
+  "advancements.advancedperipherals.ar_toolkit": "AR-Fähig!",
+  "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that are required to use the AR features. Now you decide, how reality looks like",
   "advancements.advancedperipherals.base_toolkit": "Gentlemans set!",
   "advancements.advancedperipherals.base_toolkit.description": "Erlange den Redstone Integrator, Inventory Manager und den Energy Detektor. Wie konntest du ohne diese Blöcke spielen?",
   "advancements.advancedperipherals.nbt_toolkit": "UNBEGRENZTE MACHT!!!",
   "advancements.advancedperipherals.nbt_toolkit.description": "Erlange den NBT Speicher Block und den Block Leser. Jetzt ist jedes Welten Geheimnis offen zu dir!",
   "advancements.advancedperipherals.sense_toolkit": "Die Wahrheit kann nicht für immer versteckt sein.",
   "advancements.advancedperipherals.sense_toolkit.description": "Erlange den Geo Scanner und den Umgebungs Detektor! Es gibt keine limits für die Observation!",
-
-  "item.advancedperipherals.chunk_controller": "Chunk Controller",
+  "item.advancedperipherals.chunk_controller": "Chunk Regler",
   "item.advancedperipherals.computer_tool": "Computer Werkzeug",
   "item.advancedperipherals.ar_goggles": "AR-Brille",
   "item.advancedperipherals.memory_card": "Speicher Karte",
   "item.advancedperipherals.weak_automata_core": "Schwache automata",
   "item.advancedperipherals.overpowered_weak_automata_core": "Overpowered schwache automata",
-  "item.advancedperipherals.husbandry_automata_core": "landwirtschafts automata",
-  "item.advancedperipherals.overpowered_husbandry_automata_core": "Overpowered landwirtschafts automata",
   "item.advancedperipherals.end_automata_core": "End automata",
   "item.advancedperipherals.overpowered_end_automata_core": "Overpowered end automata",
+  "item.advancedperipherals.husbandry_automata_core": "landwirtschafts automata",
+  "item.advancedperipherals.overpowered_husbandry_automata_core": "Overpowered landwirtschafts automata",
   "item.advancedperipherals.tooltip.computer_tool": "§7Mit diesem Tool kannst du GUI's von Blöcken öffnen. Aber zur zeit ist dieses Item nutzlos.",
   "item.advancedperipherals.tooltip.show_desc": "§b[§7%s§b] §7Für Beschreibung",
   "item.advancedperipherals.tooltip.disabled": "§cDieser Block ist deaktiviert in der Config, du kannst es craften aber es wird keinen nutzen haben.",
@@ -56,51 +55,44 @@
   "item.advancedperipherals.tooltip.overpowered_end_automata_core": "§7Verbesserte version des end automata core, welches überrangende Fähigkeiten besitzt! Sei vorsichtig, das Update ist sehr fragil.",
   "item.advancedperipherals.tooltip.husbandry_automata_core": "§7Upgrade für turtles, welches basische und erweiterte Interaktion mit Tieren bereitstellt.",
   "item.advancedperipherals.tooltip.overpowered_husbandry_automata_core": "§7Verbesserte version des Landwirtschafts automata core, welches überrangende Fähigkeiten besitzt! Sei vorsichtig, das Update ist sehr fragil.",
-
   "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detektor",
   "block.advancedperipherals.me_bridge": "ME Brücke",
   "block.advancedperipherals.rs_bridge": "RS Brücke",
-  "block.advancedperipherals.ar_controller": "AR Controller",
+  "block.advancedperipherals.ar_controller": "AR Regler",
   "block.advancedperipherals.energy_detector": "Energie Detektor",
   "block.advancedperipherals.peripheral_casing": "Peripherie Gehäuse",
   "block.advancedperipherals.inventory_manager": "Inventar Manager",
-  "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
+  "block.advancedperipherals.redstone_integrator": "Redstone Integrierer",
   "block.advancedperipherals.block_reader": "Block Leser",
   "block.advancedperipherals.geo_scanner": "Geo Scanner",
   "block.advancedperipherals.nbt_storage": "NBT Speicher",
   "block.advancedperipherals.colony_integrator": "Kolonie Integrator",
-
-  "turtle.advancedperipherals.chat_box_turtle": "Chatty",
-  "turtle.advancedperipherals.environment_turtle": "Umgebungs",
-  "turtle.advancedperipherals.player_detector_turtle": "Spieler",
+  "turtle.advancedperipherals.chatty_turtle": "Chatty",
+  "turtle.advancedperipherals.environment_turtle": "Umgebung",
+  "turtle.advancedperipherals.player_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
-  "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
+  "turtle.advancedperipherals.geoscanner_turtle": "Geoscannen",
+  "turtle.advancedperipherals.compass_turtle": "Compass",
   "turtle.advancedperipherals.weak_automata": "Schwache automata",
   "turtle.advancedperipherals.overpowered_weak_automata": "Overpowered schwache automata",
   "turtle.advancedperipherals.husbandry_automata": "landwirtschafts automata",
   "turtle.advancedperipherals.overpowered_husbandry_automata": "Overpowered landwirtschafts automata",
-  "turtle.advancedperipherals.end_automata": "End automata",
+  "turtle.advancedperipherals.end_automata": "Endautomata",
   "turtle.advancedperipherals.overpowered_end_automata": "Overpowered end automata",
-
   "pocket.advancedperipherals.environment_pocket": "Umgebung",
   "pocket.advancedperipherals.player_pocket": "Spieler",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
-  "pocket.advancedperipherals.geoscanner_pocket": "Geoscanning",
+  "pocket.advancedperipherals.geoscanner_pocket": "Geoscannen",
   "pocket.advancedperipherals.colony_pocket": "Kolonie",
-
   "curios.identifier.glasses": "Brille",
-
   "text.advancedperipherals.removed_player": "Die Speicherkarte wurde geleert",
   "text.advancedperipherals.added_player": "Die Speicherkarte wurde dir zugewiesen",
   "text.advancedperipherals.linked_goggles": "Erfolgreich verknüpft!",
-  "text.advancedperipherals.automata_core_feed_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
-
+  "text.advancedperipherals.automata_core_feed_by_player": "Du versuchst die Seele zu ernähren, aber dein eigener Körper weigert sich, dies zu tun. Vielleicht kann etwas mechanischere das tun?",
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "Informatiker",
-
   "keybind.advancedperipherals.category": "Advanced Peripherals",
   "keybind.advancedperipherals.description": "Zeige Beschreibung",
-
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
