--- a/src/main/resources/assets/advancedperipherals/lang/fr_fr.json
+++ b/src/main/resources/assets/advancedperipherals/lang/fr_fr.json
@@ -1,6 +1,6 @@
 {
   "advancements.advancedperipherals.root": "Advanced Peripherals",
-  "advancements.advancedperipherals.root.description": "Chaque craft commence par ce premier bloc ...",
+  "advancements.advancedperipherals.root.description": "Every journey starts from with the first block ...",
   "advancements.advancedperipherals.weak_automata_core": "Premier noyau d'automates",
   "advancements.advancedperipherals.weak_automata_core.description": "L'au-delà existe-t-il dans minecraft ?",
   "advancements.advancedperipherals.end_automata_core": "Noyau d'automate de l'End",
@@ -10,14 +10,13 @@
   "advancements.advancedperipherals.overpowered_automata_core": "Noyau d'automates surpuissant",
   "advancements.advancedperipherals.overpowered_automata_core.description": "Pouvez-vous gérer autant de puissance ?",
   "advancements.advancedperipherals.ar_toolkit": "AR-ready !",
-  "advancements.advancedperipherals.ar_toolkit.description": "Collectez des items qui nécessitent l'utilisation de la fonction AR. Maintenant vous décidez, à quoi ressemble la réalité",
+  "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that are required to use the AR features. Now you decide, how reality looks like",
   "advancements.advancedperipherals.base_toolkit": "Gentleman's set !",
   "advancements.advancedperipherals.base_toolkit.description": "Collectez l'intégrateur de redstone, le gestionnaire d'inventaire et le détecteur d'énergie. Comment as-tu joué sans ça ?",
   "advancements.advancedperipherals.nbt_toolkit": "PUISSANCE ILLIMITÉE !!!",
   "advancements.advancedperipherals.nbt_toolkit.description": "Collectez le stockage nbt et le lecteur de blocs. Maintenant, chaque secret du monde s'ouvre à toi !",
   "advancements.advancedperipherals.sense_toolkit": "La vérité ne peut pas être cachée pour toujours",
   "advancements.advancedperipherals.sense_toolkit.description": "Collectez le géo scanner et le détecteur environnemental. Il n'y a pas de limites pour l'observabilité !",
-
   "item.advancedperipherals.chunk_controller": "Contrôleur de Chunk",
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.ar_goggles": "Lunettes de Réalité Augmentée",
@@ -56,7 +55,6 @@
   "item.advancedperipherals.tooltip.overpowered_end_automata_core": "§7Version améliorée du noyau d'automates de l'End, qui offre des utilisations surpuissantes ! Attention, la mise à niveau est très fragile.",
   "item.advancedperipherals.tooltip.husbandry_automata_core": "§7Mise à niveau pour tortue, qui permet une interaction de base et une interaction avancée avec les animaux",
   "item.advancedperipherals.tooltip.overpowered_husbandry_automata_core": "§7Version améliorée du noyau d'automates d'élevage, qui offre des utilisations maîtrisées ! Attention, la mise à niveau est très fragile.",
-
   "block.advancedperipherals.environment_detector": "Détecteur d'environnement",
   "block.advancedperipherals.chat_box": "Boîte de chat",
   "block.advancedperipherals.player_detector": "Détecteur de joueurs",
@@ -71,36 +69,30 @@
   "block.advancedperipherals.geo_scanner": "Geo Scanner",
   "block.advancedperipherals.nbt_storage": "Stockage NBT",
   "block.advancedperipherals.colony_integrator": "Intégrateur de colony",
-
-  "turtle.advancedperipherals.chat_box_turtle": "Chatty",
+  "turtle.advancedperipherals.chatty_turtle": "Chatty",
   "turtle.advancedperipherals.environment_turtle": "Environnement",
-  "turtle.advancedperipherals.player_detector_turtle": "Joueur",
+  "turtle.advancedperipherals.player_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
+  "turtle.advancedperipherals.compass_turtle": "Compass",
   "turtle.advancedperipherals.weak_automata": "Automate faible",
   "turtle.advancedperipherals.overpowered_weak_automata": "Automate faible surpuissant",
   "turtle.advancedperipherals.husbandry_automata": "Automate d'élevage",
   "turtle.advancedperipherals.overpowered_husbandry_automata": "Automate d'élevage surpuissant",
   "turtle.advancedperipherals.end_automata": "Automate de l'End",
   "turtle.advancedperipherals.overpowered_end_automata": "Automate de l'End surpuissant",
-
   "pocket.advancedperipherals.environment_pocket": "Environnement",
   "pocket.advancedperipherals.player_pocket": "joueur",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
   "pocket.advancedperipherals.geoscanner_pocket": "Geoscanning",
   "pocket.advancedperipherals.colony_pocket": "Colony",
-
   "curios.identifier.glasses": "Lunettes",
-
   "text.advancedperipherals.removed_player": "Carte mémoire effacée",
   "text.advancedperipherals.added_player": "Vous avez été ajouter à la carte mémoire",
   "text.advancedperipherals.linked_goggles": "Lunettes de réalité augmentée associées avec succès !",
   "text.advancedperipherals.automata_core_feed_by_player": "Vous essayez de nourrir l'entité de l'âme, mais votre propre corps refuse de le faire. Peut-être que quelque chose de plus mécanique peut le faire ?",
-
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "Informaticien",
-
   "keybind.advancedperipherals.category": "Advanced Peripherals",
   "keybind.advancedperipherals.description": "Afficher la description",
-
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
