--- a/src/main/resources/assets/advancedperipherals/lang/ko_kr.json
+++ b/src/main/resources/assets/advancedperipherals/lang/ko_kr.json
@@ -1,6 +1,6 @@
 {
   "advancements.advancedperipherals.root": "고급 주변장치",
-  "advancements.advancedperipherals.root.description": "모든 여정은 첫 번째 블록에서 시작됩니다...",
+  "advancements.advancedperipherals.root.description": "Every journey starts from with the first block ...",
   "advancements.advancedperipherals.weak_automata_core": "첫 번째 오토마타 코어",
   "advancements.advancedperipherals.weak_automata_core.description": "마인크래프트가 사후 세계에 존재합니까?",
   "advancements.advancedperipherals.end_automata_core": "최종 오토마타 코어",
@@ -10,14 +10,13 @@
   "advancements.advancedperipherals.overpowered_automata_core": "강력한 오토마타 코어",
   "advancements.advancedperipherals.overpowered_automata_core.description": "그렇게 많은 힘을 감당할 수 있나요?",
   "advancements.advancedperipherals.ar_toolkit": "준비 완료!",
-  "advancements.advancedperipherals.ar_toolkit.description": "AR 기능을 사용해야 하는 아이템을 수집합니다. 이제 당신은 현실이 어떻게 보이는지 결정합니다.",
+  "advancements.advancedperipherals.ar_toolkit.description": "Collect items, that are required to use the AR features. Now you decide, how reality looks like",
   "advancements.advancedperipherals.base_toolkit": "신사분들 준비됐습니다!",
   "advancements.advancedperipherals.base_toolkit.description": "레드스톤 인테그레이터, 인벤토리 매니저와 에너지 감지기를 수집합니다. 이거 없이 어떻게 놀았어요?",
   "advancements.advancedperipherals.nbt_toolkit": "무제한 전력!!!",
   "advancements.advancedperipherals.nbt_toolkit.description": "NBT 스토리지 및 블록 리더를 수집합니다. 이제 모든 세상이 비밀에 부쳐요!",
   "advancements.advancedperipherals.sense_toolkit": "진실은 영원히 숨길 수 없다",
   "advancements.advancedperipherals.sense_toolkit.description": "지리 스캐너 및 환경 탐지기를 수집합니다. 관찰 가능성의 한계란 없습니다!",
-
   "item.advancedperipherals.chunk_controller": "청크 컨트롤러",
   "item.advancedperipherals.computer_tool": "컴퓨터 도구",
   "item.advancedperipherals.ar_goggles": "AR 고글",
@@ -56,7 +55,6 @@
   "item.advancedperipherals.tooltip.overpowered_end_automata_core": "§7최종 오토마타 코어의 개량 버전으로, 강력한 용도를 제공합니다. 업그레이드는 매우 깨지기 쉬우니 조심하십시오.",
   "item.advancedperipherals.tooltip.husbandry_automata_core": "§7동물과 기본적인 상호 작용 및 고급 상호 작용을 할 수 있는 터틀을 위한 업그레이드입니다.",
   "item.advancedperipherals.tooltip.overpowered_husbandry_automata_core": "§7강력한 용도를 제공하는 농사 오토마타 코어의 업그레이드된 버전입니다. 업그레이드는 매우 깨지기 쉬우니 조심하십시오.",
-
   "block.advancedperipherals.environment_detector": "환경 탐지기",
   "block.advancedperipherals.chat_box": "채팅 박스",
   "block.advancedperipherals.player_detector": "플레이어 탐지기",
@@ -71,36 +69,30 @@
   "block.advancedperipherals.geo_scanner": "지리 스캐너",
   "block.advancedperipherals.nbt_storage": "NBT 스토리지",
   "block.advancedperipherals.colony_integrator": "콜로니 인테그레이터",
-
-  "turtle.advancedperipherals.chat_box_turtle": "채티",
-  "turtle.advancedperipherals.environment_turtle": "환경",
-  "turtle.advancedperipherals.player_detector_turtle": "플레이어",
+  "turtle.advancedperipherals.chatty_turtle": "Chatty",
+  "turtle.advancedperipherals.environment_turtle": "Environment",
+  "turtle.advancedperipherals.player_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "청키",
   "turtle.advancedperipherals.geoscanner_turtle": "지리스캔",
+  "turtle.advancedperipherals.compass_turtle": "Compass",
   "turtle.advancedperipherals.weak_automata": "약한 오토마타",
   "turtle.advancedperipherals.overpowered_weak_automata": "강력한 약한 오토마타",
   "turtle.advancedperipherals.husbandry_automata": "농사 오토마타",
   "turtle.advancedperipherals.overpowered_husbandry_automata": "강력한 농사 오토마타",
   "turtle.advancedperipherals.end_automata": "최종 오토마타",
   "turtle.advancedperipherals.overpowered_end_automata": "강력한 최종 오토마타",
-
   "pocket.advancedperipherals.environment_pocket": "환경",
   "pocket.advancedperipherals.player_pocket": "플레이어",
   "pocket.advancedperipherals.chatty_pocket": "채티",
   "pocket.advancedperipherals.geoscanner_pocket": "지리스캔",
   "pocket.advancedperipherals.colony_pocket": "콜로니",
-
   "curios.identifier.glasses": "안경",
-
   "text.advancedperipherals.removed_player": "메모리 카드를 지웠습니다.",
   "text.advancedperipherals.added_player": "메모리 카드에 사용자를 추가했습니다.",
   "text.advancedperipherals.linked_goggles": "AR 고글을 성공적으로 연결했습니다!",
   "text.advancedperipherals.automata_core_feed_by_player": "당신은 실체를 영혼으로 먹이려고 하지만 당신의 몸은 이것을 거부합니다. 좀 더 기계적인 걸로 할 수 있지 않을까요?",
-
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "컴퓨터 과학자",
-
   "keybind.advancedperipherals.category": "고급 주변장치",
   "keybind.advancedperipherals.description": "설명 표시",
-
-  "itemGroup.advancedperipheralstab": "컴퓨터크래프트: 고급 주변장치"
+  "itemGroup.advancedperipheralstab": "고급 주변장치"
 }
